通过这个项目知道了一些聊天室的具体实现方式，在表的建立上面，还有就是通信的一些方式，这些都是比较重要的一些操作
