# router/router.go
@@ -13,7 +13,29 @@ func Router() *gin.Engine {
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
-	r.GET("/user/getUserList", service.GetUserList)
-	r.GET("/user/createUser", service.CreateUser)
+	//静态资源
+
+	r.Static("/asset", "asset/")
+	r.StaticFile("/favicon.ico", "asset/images/favicon.ico")
+	//	r.StaticFS()
+	r.LoadHTMLGlob("views/**/*")
+	//首页
+	r.GET("/", service.GetIndex)
+	r.GET("/index", service.GetIndex)
+	r.GET("/toRegister", service.ToRegister)
+	r.GET("/toChat", service.ToChat)
+	r.GET("/chat", service.Chat)
+	r.POST("/searchFriends", service.SearchFriends)
+	//用户模块
+	r.POST("/user/getUserList", service.GetUserList)
+	r.POST("/user/createUser", service.CreateUser)
+	r.POST("/user/deleteUser", service.DeleteUser)
+	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+	//r.POST("/user/find", service.FindByID)
+	//发送消息
+	r.GET("/user/sendMsg", service.SendMsg)
+	r.GET("/user/sendUserMsg", service.SendUserMsg)
+	r.POST("/user/redisMsg", service.RedisMsg)
 	return r
 }
